--- a/babylonProj/collisions/index.html
+++ b/babylonProj/collisions/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Mesh motion with keyboard press and pick</title>
+        <title>Collisions</title>
     </head>
     <body> </body>
 </html>
